--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -26,10 +26,10 @@
                 <div class="itemBoxTable__bodyCellInner">
 
                   <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__value">
+                    <div class="pmx-selector__item">
                       <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockLabel">Workspace</span>
-                        <span class="pmx-selector__blockField">My private smartlists</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">My private smartlists</span>
                       </div>
                     </div>
                   </div>
@@ -58,10 +58,10 @@
                 <div class="itemBoxTable__bodyCellInner">
 
                   <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__value">
+                    <div class="pmx-selector__item">
                       <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockLabel">Workspace</span>
-                        <span class="pmx-selector__blockField">Financial_milestones PMX (smartlist)</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Financial_milestones PMX (smartlist)</span>
                       </div>
                     </div>
                   </div>
@@ -90,10 +90,10 @@
                 <div class="itemBoxTable__bodyCellInner">
 
                   <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__value">
+                    <div class="pmx-selector__item">
                       <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockLabel">Workspace</span>
-                        <span class="pmx-selector__blockField">Milestone Born - MAINT - Year 3</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Milestone Born - MAINT - Year 3</span>
                       </div>
                     </div>
                   </div>
@@ -106,10 +106,10 @@
                 <div class="itemBoxTable__bodyCellInner">
 
                   <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__value">
+                    <div class="pmx-selector__item">
                       <div class="pmx-selector__block">
-                        <span class="pmx-selector__blockLabel">Workspace</span>
-                        <span class="pmx-selector__blockField">Milestone Gerkesklooster - LIC - Year 2</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
+                        <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Milestone Gerkesklooster - LIC - Year 2</span>
                       </div>
                     </div>
                   </div>
