fix tabs active link bar bug

--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -26,7 +26,7 @@
                 <div class="itemBoxTable__bodyCellInner">
 
                   <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
                       <div class="pmx-selector__block">
                         <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
                         <span class="pmx-selector__blockPart pmx-selector__blockPart--field">My private smartlists</span>
@@ -58,7 +58,7 @@
                 <div class="itemBoxTable__bodyCellInner">
 
                   <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
                       <div class="pmx-selector__block">
                         <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
                         <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Financial_milestones PMX (smartlist)</span>
@@ -90,7 +90,7 @@
                 <div class="itemBoxTable__bodyCellInner">
 
                   <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
                       <div class="pmx-selector__block">
                         <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
                         <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Milestone Born - MAINT - Year 3</span>
@@ -106,7 +106,7 @@
                 <div class="itemBoxTable__bodyCellInner">
 
                   <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
+                    <div class="pmx-selector__item pmx-selector__item--selected">
                       <div class="pmx-selector__block">
                         <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Workspace</span>
                         <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Milestone Gerkesklooster - LIC - Year 2</span>
