--- a/_includes/blocks/colorSelector-children.html
+++ b/_includes/blocks/colorSelector-children.html
@@ -1,8 +1,8 @@
-<div class="itemBox itemBox--children js_itemBox--colors">
+<div class="itemBox itemBox--children itemBox--tagPicker js_itemBox--colors">
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: black;" data-color="black">܌</i>
           </div>
@@ -14,7 +14,7 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">܌</i>
           </div>
@@ -26,7 +26,7 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: red;" data-color="red">܌</i>
           </div>
@@ -38,7 +38,7 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: blue;" data-color="blue">܌</i>
           </div>
@@ -50,7 +50,7 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: yellow;" data-color="yellow">܌</i>
           </div>
@@ -62,7 +62,7 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: orange;" data-color="orange">܌</i>
           </div>
@@ -74,7 +74,7 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 0;" data-flex="0">
           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--color">
             <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: hotpink;" data-color="hotpink">܌</i>
           </div>
