--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -72,7 +72,7 @@
             </li>
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
               <div class="itemBoxTable__bodyCellInner">
-                <i>All</i>
+                All
               </div>
             </li>
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove js_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -107,7 +107,9 @@
                     </div>
                   </li>
                 </ul>
-                  {% include blocks/colorSelector-children.html %}
+
+                {% include blocks/colorSelector-children.html %}
+
                 <ul class="itemBoxTable__bodyRow">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
