--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -39,7 +39,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">܌</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">ग़</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -93,7 +93,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                   <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">܌</i>
+                      <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">ग़</i>
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -111,7 +111,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">܌</i>
+                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -129,7 +129,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">܌</i>
+                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -147,7 +147,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">܌</i>
+                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
