more intelligent filter function - not bound by ID to input field

--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -4,7 +4,7 @@
   <div class="multiSelector__box">
 
     <div class="multiSelector__search">
-      <input type="search" class="multiSelector__searchInput" placeholder="filter through tags" id="tagFilter" onkeyup="tagFilter()">
+      <input type="search" class="multiSelector__searchInput js_multiSelector__filterInput" placeholder="filter through tags">
     </div>
 
   </div>
