--- a/_includes/popups/multiSelector2.html
+++ b/_includes/popups/multiSelector2.html
@@ -3,7 +3,7 @@
   <div class="multiSelector__box">
 
     <div class="multiSelector__search">
-      <input type="search" class="multiSelector__searchInput" placeholder="filter through columns">
+      <input type="search" class="multiSelector__searchInput js_multiSelector__filterInput" placeholder="filter through columns">
     </div>
 
   </div>
@@ -34,9 +34,9 @@
           <div class="itemBox itemBox--children js_multiSelector__box--selectionChildren">
             <div class="itemBoxTable">
               <div class="itemBoxBody itemBoxBody--sortable">
-                <ul class="itemBoxTable__bodyRow">
+                <ul class="itemBoxTable__bodyRow js_filterableCell">
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text"><span class="outer"><span class="inner">Assigned to</span></span>
+                    <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Assigned to
                     </div>
                   </li>
                   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
@@ -103,7 +103,7 @@
                 <div class="itemBox itemBox--children">
                   <div class="itemBoxTable">
                     <div class="itemBoxBody">
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Assigned to</div>
                         </li>
@@ -113,7 +113,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Attachments</div>
                         </li>
@@ -123,7 +123,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Child items</div>
                         </li>
@@ -133,7 +133,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Comments</div>
                         </li>
@@ -143,7 +143,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Description</div>
                         </li>
@@ -153,7 +153,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Due date</div>
                         </li>
@@ -163,7 +163,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Due text</div>
                         </li>
@@ -173,7 +173,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">List</div>
                         </li>
@@ -183,7 +183,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Nr</div>
                         </li>
@@ -193,7 +193,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Priority</div>
                         </li>
@@ -203,7 +203,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Solution</div>
                         </li>
@@ -213,7 +213,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Status</div>
                         </li>
@@ -223,7 +223,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Title</div>
                         </li>
@@ -256,7 +256,7 @@
                 <div class="itemBox itemBox--children">
                   <div class="itemBoxTable">
                     <div class="itemBoxBody">
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Creator</div>
                         </li>
@@ -266,7 +266,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Last updated by</div>
                         </li>
@@ -276,7 +276,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Originator</div>
                         </li>
@@ -286,7 +286,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Performed by</div>
                         </li>
@@ -296,7 +296,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Performed for</div>
                         </li>
@@ -328,7 +328,7 @@
                 <div class="itemBox itemBox--children">
                   <div class="itemBoxTable">
                     <div class="itemBoxBody">
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Created on</div>
                         </li>
@@ -338,7 +338,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Last updated</div>
                         </li>
@@ -348,7 +348,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Planned start</div>
                         </li>
@@ -358,7 +358,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Source date</div>
                         </li>
@@ -368,7 +368,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Source event</div>
                         </li>
@@ -378,7 +378,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Tag</div>
                         </li>
@@ -410,7 +410,7 @@
                 <div class="itemBox itemBox--children">
                   <div class="itemBoxTable">
                     <div class="itemBoxBody">
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Actual effort (hours)</div>
                         </li>
@@ -420,7 +420,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Effort</div>
                         </li>
@@ -430,7 +430,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">ETC</div>
                         </li>
@@ -440,7 +440,7 @@
                           </div>
                         </li>
                       </ul>
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Planned effort (hours)</div>
                         </li>
@@ -472,7 +472,7 @@
                 <div class="itemBox itemBox--children">
                   <div class="itemBoxTable">
                     <div class="itemBoxBody">
-                      <ul class="itemBoxTable__bodyRow">
+                      <ul class="itemBoxTable__bodyRow  js_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--text">Design status</div>
                         </li>
