--- a/_includes/popups/colorPicker-children.html
+++ b/_includes/popups/colorPicker-children.html
@@ -113,7 +113,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">ग़</i>
+                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: blue;" data-color="green">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -131,7 +131,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">ग़</i>
+                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: orange;" data-color="green">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
@@ -149,7 +149,7 @@
                 <ul class="itemBoxTable__bodyRow js_filterableCell">
                     <li class="itemBoxTable__bodyCell js_colorselector-trigger" style="flex-grow: 0;" data-flex="0">
                       <div class="itemBoxTable__bodyCellInner js_itemBoxTable__bodyCellInner--colortoggle">
-                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: green;" data-color="green">ग़</i>
+                        <i class="itemBoxTable__action itemBoxTable__action--toggle" style="color: red;" data-color="green">ग़</i>
                       </div>
                     </li>
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
