fixed simple select js

--- a/_includes/components/selectors/collapsed/status.html
+++ b/_includes/components/selectors/collapsed/status.html
@@ -2,7 +2,7 @@
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
-      <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
+      <span class="pmx-selector__blockPart pmx-selector__blockPart--field js_pmx-selector__blockPart--label">Not started</span>
     </div>
   </div>
 </div>
