--- a/_includes/components/selectors/collapsed/teams.html
+++ b/_includes/components/selectors/collapsed/teams.html
@@ -2,18 +2,21 @@
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockSeperator">•</span>
       <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad X</span>
     </div>
   </div>
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: blue;">܌</span>
+      <span class="pmx-selector__blockSeperator">•</span>
       <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Y</span>
     </div>
   </div>
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: orange;">܌</span>
+      <span class="pmx-selector__blockSeperator">•</span>
       <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Squad Z</span>
     </div>
   </div>
