--- a/_includes/components/selectors/expanded/tags.html
+++ b/_includes/components/selectors/expanded/tags.html
@@ -2,18 +2,21 @@
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockSeperator">•</span>
       <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
     </div>
   </div>
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockSeperator">•</span>
       <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
     </div>
   </div>
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block ">
       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: green;">܌</span>
+      <span class="pmx-selector__blockSeperator">•</span>
       <span class="pmx-selector__blockPart pmx-selector__blockPart--field">critical</span>
     </div>
   </div>
