--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -16,6 +16,7 @@
                       <div class="pmx-selector__item">
                         <div class="pmx-selector__block ">
                           <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
+                          <span class="pmx-selector__blockSeperator">•</span>
                           <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
                         </div>
                       </div>
@@ -32,6 +33,7 @@
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
+                            <span class="pmx-selector__blockSeperator">•</span>
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
                           </div>
                         </div>
@@ -48,6 +50,7 @@
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
+                            <span class="pmx-selector__blockSeperator">•</span>
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
                           </div>
                         </div>
@@ -64,7 +67,9 @@
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block ">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix">-</span>
+                            <span class="pmx-selector__blockSeperator">•</span>
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
+                            <span class="pmx-selector__blockSeperator">•</span>
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dialog-wrapper</span>
                           </div>
                         </div>
