update class names

--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -1,13 +1,13 @@
-  <div class="notifications__userInfo">
-    <div class="notifications__userInfoName">
-      <a href="#" class="notifications__userInfoLongName">Nick De Jaeger</a>
+  <div class="user-menu__userInfo">
+    <div class="user-menu__userInfoName">
+      <a href="#" class="user-menu__userInfoLongName">Nick De Jaeger</a>
     </div>
-    <div class="notifications__userInfoAvatar">
+    <div class="user-menu__userInfoAvatar">
       <img src="assets/images/profile.jpg" alt="profile picture">
     </div>
   </div>
 
-  <div class="notifications__actions">
+  <div class="user-menu__actions">
 
     <div class="itemBox">
       <div class="itemBoxTable">
