--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -5,7 +5,11 @@
 
 @import "reset.css";
 @import "keyframes.css";
+
 @import "app.css";
+@import "blocks/app-navigator.css";
+@import "blocks/user-menu.css";
+
 
 // Blocks
 @import "blocks/appHeader.css";
