--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,12 +8,12 @@
   <div class="app cf document__info--visible">
     <div class="app__overlay"></div>
 
-    <div class="app__nav__wrapper">
+    <div class="app-navigator">
       {% include blocks/app-nav.html %}
     </div>
 
-    <div class="notifications">
-      {% include blocks/notifications.html %}
+    <div class="user-menu">
+      {% include blocks/user-menu.html %}
     </div>
 
     <main class="app__container">
