--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,6 +1,10 @@
 ---
 ---
 
+:root {
+  --primary-color: #2C5386;
+}
+
 @font-face {
   font-family: 'pmx';
   src: url('../assets/fonts/pmx.ttf') format('truetype');
@@ -19,6 +23,7 @@ body {
   font-family: 'tenforce', sans-serif;
   overflow-x: hidden;
   background-color: #2C5386;
+  background-color: var(--primary-color);
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -33,6 +38,9 @@ body.page-Popups {
 }
 body.page-Popups .multiSelector {
   margin: 100px 0;
+}
+body.fixed {
+  overflow-y: hidden;
 }
 
 input,
@@ -74,40 +82,40 @@ textarea {
 }
 
 .btn {
-    display: block;
-    position: relative;
-    text-transform: uppercase;
-    font-size: 16px;
-    font-style: italic;
-    font-weight: 700;
-    letter-spacing: 1px;
-    padding: 2px 14px;
-    margin: 0 0 0 5px;
-    border-radius: 25px;
-    cursor: pointer;
-}
+  display: block;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 700;
+  letter-spacing: 1px;
+  padding: 2px 14px;
+  margin: 0 0 0 5px;
+  border-radius: 25px;
+  cursor: pointer;
 
-.btn--success {
+  &--success {
     background-color: #11ceff;
     background: linear-gradient(to right, rgba(3,163,221,1) 0%,rgba(33,194,249,1) 100%);
     color: #FFF;
-}
+  }
 
-.btn--danger {
+  &--danger {
     color: red;
-}
-.btn--gray {
+  }
+
+  &--gray {
   background-color: #D7D7D7;
   color: black;
-}
-.btn--blue {
+  }
+
+  &--blue {
   background-color: rgba(33,194,249,1);
   color: white;
+  }
 }
 
-body.fixed {
-  overflow-y: hidden;
-}
+
 .app {
   position: relative;
   background-color: #F4F4F4;
@@ -116,17 +124,11 @@ body.fixed {
   min-width: 0;
   height: 100vh;
 }
-.app.app__nav--visible .app__nav__wrapper {
-  left: 0;
-  background-color: rgba(0,0,0,.6);
-  z-index: 9;
 
-}
 .app.app__nav--visible .app__container {
   left: 50%;
 }
 
-.notifications--visible .app__overlay,
 .app.assistance--visible .app__overlay,
 .app.overlay--visible .app__overlay,
 .app.add-comment--visible .app__overlay,
@@ -134,12 +136,7 @@ body.fixed {
   opacity: 1;
   pointer-events: auto;
 }
-.notifications--visible .notifications {
-  right: 0;
-}
-.notifications--visible .app__container {
-  left: -25%;
-}
+
 
 
 
@@ -165,7 +162,6 @@ body.fixed {
 
 .app.document__info--visible .panel__left {
     width: 25%;
-
     left: 0;
 }
 .app.document__info--visible .panel__center {
@@ -186,10 +182,6 @@ body.fixed {
     right: 0;
 }
 
-.document__comments--visible.notifications--visible .panel__right  .document__comments {
-  right: 25%;
-}
-
 
 
 
@@ -208,85 +200,13 @@ body.fixed {
   z-index: 2;
   opacity: 0;
   pointer-events: none;
-
   transition: opacity .3s ease-in-out;
 }
 
-.app__nav__wrapper {
-    position: fixed;
-    z-index: 2;
-    width: 50%;
-    height: 100%;
-    height: 100vh;
-    top: 0;
-    left: -50%;
-    transition: all .3s ease-in-out;
-    background-color: transparent;
-    overflow: hidden;
-    color: #FFF;
-}
-
-.app__nav {
-  min-height: 100%;
-  z-index: 5;
-  background-color: #2C5386;
-  height: 100%;
-  overflow-y: auto;
-}
-.app__nav .tabs__panel {
-  padding: 10px;
-}
 
 
-.notifications {
-  position: fixed;
-  z-index: 2;
-  width: 25%;
-  height: 100vh;
-  top: 0;
-  right: -25%;
-  transition: all .3s ease-in-out;
-  background-color: #2C5386;
-  color: #FFF;
-}
-.notifications__userInfo {
-  position: relative;
-  padding: 15px;
-  background-color: #284b78;
-  white-space: nowrap;
-  text-align: right;
 
-}
-.notifications__userInfoAvatar {
-  position: relative;
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-}
-.notifications__userInfoAvatar img {
-  border-radius: 100%;
-}
-.notifications__userInfoName {
-  position: relative;
-  display: inline-block;
-  font-size: 24px;
-  font-weight: 300;
-  vertical-align: middle;
-  padding: 0 3% 0 0;
-  width: -webkit-calc(100% - 30px);
-  width: -moz-calc(100% - 30px);
-  width: calc(100% - 30px);
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
 
-.notifications__actions {
-  padding: 10px;
-}
-.notifications__actions .itemBox {
-  margin: 0 0 10px;
-}
 
 .app__container {
   position: relative;
