--- a/_includes/blocks/app-header-no-breadcrumb.html
+++ b/_includes/blocks/app-header-no-breadcrumb.html
@@ -1,18 +1,18 @@
-<div class="app-navigator cf">
-  <div class="app-navigator__left">
-    <div class="app-navigator__item">
+<div class="app-header-inner cf">
+  <div class="app-header-inner__left">
+    <div class="app-header-inner__item">
       <h1>
-        <a href="#"  data-action="open-left-panel">छ</a>
+        <a href="#" class="JS_toggle-app-navigator">छ</a>
         <a href="#">Dashboard</a>
       </h1>
     </div>
   </div>
-  <div class="app-navigator__right">
-    <div class="app-navigator__item" data-action="open-semsearch">
+  <div class="app-header-inner__right">
+    <div class="app-header-inner__item" data-action="open-semsearch">
       <a href="#">ञ</a>
       {% include popups/semsearch.html %}
     </div>
-    <div class="app-navigator__item" data-action="open-right-panel">
+    <div class="app-header-inner__item JS_toggle-user-menu">
       <a href="#">ज</a>
     </div>
   </div>
