--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -2,7 +2,7 @@
   <div class="app-header-inner__left">
     <div class="app-header-inner__item">
       <h1>
-        <a href="#"  data-action="open-left-panel">छ</a>
+        <a href="#" class="JS_toggle-app-navigator">छ</a>
         <a href="#">Dashboard</a>
       </h1>
     </div>
@@ -12,7 +12,7 @@
       <a href="#">ञ</a>
       {% include popups/semsearch.html %}
     </div>
-    <div class="app-header-inner__item" data-action="open-right-panel">
+    <div class="app-header-inner__item JS_toggle-user-menu">
       <a href="#">ज</a>
     </div>
   </div>
