--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -7,12 +7,11 @@
 @import "keyframes.css";
 
 @import "app.css";
-@import "blocks/app-navigator.css";
-@import "blocks/user-menu.css";
-
 
 // Blocks
-@import "blocks/appHeader.css";
+@import "blocks/app-navigator.css";
+@import "blocks/user-menu.css";
+@import "blocks/app-header.css";
 
 // Components
 @import "components/breadcrumbs.css";
