--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -12,16 +12,14 @@
 @import "blocks/app-navigator.css";
 @import "blocks/user-menu.css";
 @import "blocks/app-header.css";
+@import "blocks/applicable-slider.css";
 
 // Components
 @import "components/breadcrumbs.css";
 @import "components/tabs.css";
 
 @import "components/itemBox.css";
-
-//@import "components/selector.css";
-@import "components/selector2.css";
-
+@import "components/selector.css";
 @import "components/multiSelector.css";
 @import "components/multiSelector-colorPicker.css";
 
