--- a/_includes/blocks/app-header.html
+++ b/_includes/blocks/app-header.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="app-header-inner__right">
-    <div class="app-header-inner__item" data-action="open-semsearch">
+    <div class="app-header-inner__item JS_toggle-semseach-1">
       <a href="#">ञ</a>
       {% include popups/semsearch.html %}
     </div>
