--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup multiSelector--semsearch" data-popup="semsearch">
+<div class="multiSelector multiSelector--popup multiSelector--semsearch JS_semsearch-1">
   <div class="itemBox">
     <div class="itemBoxFilter">
       <div class="itemBoxFilter__input">
