--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -61,80 +61,40 @@
 .pmx-selector {
   position: relative;
   display: inline-block;
-  height: 28px;
-  vertical-align: middle;
+  height: 30px;
+  padding: 2px;
+  background-color: #D7D7D7;
+  border-radius: 30px;
   white-space: nowrap;
   font-size: 0;
+  max-width: 100%;
   line-height: initial;
 
-  max-width: 100%;
-
-  border-radius: 30px;
-  background-color: #D7D7D7;
-
-  padding: 2px;
-
-  /*
-  &::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 28px;
-    border-radius: 30px;
-    pointer-events: none;
-    background-color: #D7D7D7;
-  }
-  */
-
-  &__value {
+  &__item {
     position: relative;
     display: inline-block;
-    height: 24px;
+    height: 26px;
     min-width: 26px;
-    z-index: 99;
-    padding: 0 10px;
-    font-size: 16px;
-    text-align: center;
-    border-radius: 0;
-    cursor: pointer;
-    border: 1px solid rgba(255,255,255,0);
-    border-right: 2px solid transparent;
-    transition: all 0.3s ease-in-out;
-
     max-width: 100%;
-
-    &:first-child {
-      /*margin-left: 2px;*/
-      border-top-left-radius: 30px;
-      border-bottom-left-radius: 30px;
-    }
-
-    &:last-child {
-      /*margin-right: 2px;*/
-      border-top-right-radius: 30px;
-      border-bottom-right-radius: 30px;
-    }
+    padding: 2px 4px;
+    border-radius: 30px;
+    overflow: hidden;
+    font-size: 16px;
+    color: #808080;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
 
     &:hover {
-      .pmx-selector__blockField {
-        color: #000000;
-      }
+      background-color: rgba(255, 255, 255, .6);
+      color: rgba(0, 0, 0, .7);
     }
 
     &--selected {
       background-color: #FFF;
       box-shadow: 0 3px 10px rgba(0,0,0,.2);
 
-      &:hover {
-        box-shadow: 0 3px 30px rgba(0,0,0,.4);
-      }
-
-      &:active {
-        box-shadow: 0 3px 10px rgba(0,0,0,.4);
-      }
-
-      .pmx-selector__blockField {
-        color: #000000;
+      .pmx-selector__blockPart--field {
+        color: #000;
       }
     }
   }
@@ -142,137 +102,97 @@
   &__block {
     position: relative;
     height: 22px;
-
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    padding: 2px 4px;
+    display: flex;
+    align-items: center;
 
     &Part {
       position: relative;
       display: inline-block;
-      height: 22px;
-      vertical-align: top;
-      transition: all .3s ease-in-out;
+      padding: 0 3px;
+      width: 100%;
+      text-align: center;
 
-      &--prefix {
-        color: #808080;
-        transition: all .3s ease-in-out;
+      &:first-child {
+        padding-left: 0;
+      }
 
-        + .pmx-selector__blockPart--label {
-          padding: 0 0 0 14px;
-
-          &:before {
-            content: '•';
-            position: absolute;
-            left: 3px;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 12px;
-            color: #D4D4D4;
-          }
-        }
+      &:last-child {
+        padding-right: 0;
       }
 
       &--label  {
         text-transform: uppercase;
         color: #808080;
         font-size: 10px;
-        line-height: 24px;
         font-weight: 600;
         letter-spacing: .7px;
-
-        + .pmx-selector__blockPart--field {
-          padding: 0 0 0 14px;
-
-          &:before {
-            content: '•';
-            position: absolute;
-            left: 3px;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 12px;
-            color: #D4D4D4;
-          }
-        }
       }
 
       &--field {
-        color: #808080;
+
       }
+    }
+
+    &Seperator {
+      padding: 0 3px;
+      color: #A2A2A2;
+      line-height: initial;
+      letter-spacing: normal;
+      font-size: 12px;
+      font-weight: 400;
     }
   }
 
   &--readonly {
     .pmx-selector__item {
       background-color: #FFF;
+      box-shadow: none;
 
-      .pmx-selector__blockField {
+      &:hover {
+        background-color: #FFF;
+        color: #000;
+      }
+
+      .pmx-selector__blockPart--field {
         color: #000;
       }
     }
   }
 
   &--toggleSelect {
-    .pmx-selector__item {
-      border-radius: 30px;
-
-      &--selected {
-        cursor: default;
-      }
-    }
   }
 
   &--multiSelect {
     .pmx-selector__item {
+      border-radius: 0;
+
+      &:first-child {
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+      }
+
+      &:last-child {
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+      }
+
       &:not(:last-child)::after {
         content: '';
         position: absolute;
-        top: -3px;
-        right: -2px;
-        height: 28px;
-        border-right: 1px dashed #C5C5C5;
+        top: 0;
+        right: 0;
+        height: 30px;
+        border-right: 1px dashed #808080;
       }
     }
   }
 
   &--collapsed {
-    &::before {
-      opacity: 0;
-    }
-
-    &.pmx-selector--multiSelect {
-      .pmx-selector__item {
-        &:not(:last-child)::after {
-          top: -1px;
-          height: 24px;
-        }
-      }
-    }
+    background: none;
+    background-color: transparent;
   }
 
   &--expanded {
-    &.pmx-selector--toggleSelect {
-      .pmx-selector__item {
-        &--selected {
-          &:hover {
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-          }
-
-          &:active {
-            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-          }
-        }
-      }
-    }
   }
-}
-
-
-/* TEMP */
-
-.pmx-selector__item:not(.pmx-selector__item--selected) .pmx-selector__block .pmx-selector__blockPrefix {
-  color: gray !important;
-}
-.pmx-selector__item:not(.pmx-selector__item--selected):hover .pmx-selector__block .pmx-selector__blockPrefix {
-  color: green !important;
 }
