--- a/_includes/blocks/document-steps.html
+++ b/_includes/blocks/document-steps.html
@@ -10,37 +10,37 @@
 
     <div class="tabs-panels">
         <div class="tabs-panels__panel" tabindex="1">
-            <ul class="document__steps">
-                <li class="step step--resloved">
-                    <span class="step__symbol"></span>
-                    <span class="step__label">Project</span>
+            <ul class="item-steps">
+                <li class="item-steps__step item-steps__step--resloved">
+                    <span class="item-steps__stepSymbol"></span>
+                    <span class="item-steps__stepLabel">Project</span>
                 </li>
-                <li class="step step--current">
-                    <span class="step__symbol"></span>
-                    <span class="step__label">Doelstelling</span>
+                <li class="item-steps__step item-steps__step--current">
+                    <span class="item-steps__stepSymbol"></span>
+                    <span class="item-steps__stepLabel">Doelstelling</span>
                 </li>
-                <li class="step step--unresolved">
-                    <span class="step__symbol"></span>
-                    <span class="step__label">Milestone and link indicator</span>
+                <li class="item-steps__step item-steps__step--unresolved">
+                    <span class="item-steps__stepSymbol"></span>
+                    <span class="item-steps__stepLabel">Milestone and link indicator</span>
                 </li>
-                <li class="step step--unresolved">
-                    <span class="step__symbol"></span>
-                    <span class="step__label">Step 3</span>
-                    <div class="step__info">
+                <li class="item-steps__step item-steps__step--unresolved">
+                    <span class="item-steps__stepSymbol"></span>
+                    <span class="item-steps__stepLabel">Step 3</span>
+                    <div class="item-steps__stepInfo">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </li>
-                <li class="step step--unresolved">
-                    <span class="step__symbol"></span>
-                    <span class="step__label">Set-up request</span>
+                <li class="item-steps__step item-steps__step--unresolved">
+                    <span class="item-steps__stepSymbol"></span>
+                    <span class="item-steps__stepLabel">Set-up request</span>
                 </li>
-                <li class="step step--unresolved">
-                    <span class="step__symbol"></span>
-                    <span class="step__label">Step 5</span>
+                <li class="item-steps__step item-steps__step--unresolved">
+                    <span class="item-steps__stepSymbol"></span>
+                    <span class="item-steps__stepLabel">Step 5</span>
                 </li>
-                <li class="step step--unresolved">
-                    <span class="step__symbol"></span>
-                    <span class="step__label">Finished</span>
+                <li class="item-steps__step item-steps__step--unresolved">
+                    <span class="item-steps__stepSymbol"></span>
+                    <span class="item-steps__stepLabel">Finished</span>
                 </li>
             </ul>
         </div><!-- /.tabs__panel -->
