--- a/_includes/main.html
+++ b/_includes/main.html
@@ -50,7 +50,7 @@
               <div class="document__content">
 
                 <div class="panel__left">
-                  {% include blocks/document-steps.html %}
+                  {% include blocks/item-steps.html %}
                 </div>
 
                 <div class="panel__center">
